Add extractor to extract process data from profile

--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,18 @@ gallery/how_to/work_with_microtvm/micro_tvmc.py
 
 # Used in CI to communicate between Python and Jenkins
 .docker-image-names/
+
+dbg_build/
+release_build/
+*.pdf
+*.jpg
+*.tiff
+*.json
+*.npy
+*.csv
+*.xlsx
+tmp.*
+*.ncu-rep
+*.pkl
+
+
